--- a/theme/css/pure.css
+++ b/theme/css/pure.css
@@ -31,6 +31,10 @@ pre {
     box-shadow: 2px 2px 2px #888;
 }
 
+.pure-u {
+    width: 100%;
+}
+
 .sidebar {
     position: fixed;
     top: 0;
@@ -167,7 +171,6 @@ pre {
     font-size: 110%;
     line-height: 1.45;
     color: #333332;
-    width: 100%
 }
 
 .post {
